codegen/ui_tests/export_mod_raw_noreturn.stderr
error: functions marked with 'return_raw' must return Result<Dynamic, Box<EvalAltResult>>
  --> $DIR/export_mod_raw_noreturn.rs:12:5
   |
12 | pub fn test_fn(input: &mut Point) {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_mod`
  --> $DIR/export_mod_raw_noreturn.rs:22:5
   |
22 |     test_mod::test_fn(&mut n);
   |     ^^^^^^^^ use of undeclared crate or module `test_mod`
